<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:background="@color/maroon"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/toolbarTitle_home"
            app:titleMarginStart="-10dp"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            app:titleTextColor="@color/white" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="550dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationMenu"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp">

        </FrameLayout>

        <LinearLayout
            android:id="@+id/bottomNavigationMenu"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:backgroundTint="@color/white"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="58dp">

            <Button
                android:id="@+id/home_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/buttonText_home"
                android:textColor="#7E0606"
                android:textSize="16sp"
                app:icon="@drawable/ic_baseline_home_24"
                app:iconGravity="top"
                app:iconPadding="-10dp"
                app:iconSize="55dp"
                app:iconTint="#7E0606"
                app:iconTintMode="src_in" />

            <Button
                android:id="@+id/order_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/buttonText_order"
                android:textColor="#7E0606"
                android:textSize="16sp"
                app:icon="@drawable/order_icon"
                app:iconGravity="top"
                app:iconPadding="-5dp"
                app:iconSize="55dp"
                app:iconTint="#7E0606"
                app:iconTintMode="src_in" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>